# spirdo

./: .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION.md  PERF_REFACTOR_REPORT.md  README.md  cabal.project  compute.spv  fragment.spv  justfile  shader.spv  spirdo-compile-bench.prof  spirdo.cabal  vertex.spv
.cabal/: config
.cabal/store/ghc-9.12.2-5327/hsc2hs-0.68.10-e-hsc2hs-71059c12d3fd87e47abbba92bde89bbdf46f5ba59a0b527517a0cad6e45bc25a/: cabal-hash.txt
.github/workflows/: parity-tests.yml
bench/: CompileBench.hs
bench/fixtures/: feature.wesl
docs/: spec-snapshots.md
examples/: cabal.project  spirdo-examples.cabal
examples/app/: Main.hs
examples/src/Examples/: Compute.hs  Fragments.hs  Vertex.hs
examples/src/Examples/Fragments/: CheckerWarp.hs  CirclePulse.hs  Clouds.hs  GradientBloom.hs  InlineImports.hs  Kaleidoscope.hs  Metaballs.hs  NoiseFlow.hs  PlasmaStorm.hs  RippleCaustics.hs  SdfText.hs  SineWaves.hs  SpectrumShift.hs  SwirlVortex.hs  VignetteGlow.hs
exe/: Main.hs
exe/Examples/: Compute.hs  Fragments.hs  Override.hs  Vertex.hs
exe/Examples/Fragments/: Aurora.hs  Bits.hs  CheckerWarp.hs  Clouds.hs  FeatureMix.hs  Grass.hs  Grid.hs  Mandelbrot.hs  Metaballs.hs  NoiseFlow.hs  Plasma.hs  PlasmaStorm.hs  Primitives.hs  ProteanClouds.hs  Raymarch.hs  RippleCaustics.hs  SdfText.hs  Seascape.hs  SineWaves.hs  SpectrumShift.hs  Starfield.hs  Terrain.hs  Triangle.hs  Tunnel.hs  VignetteGlow.hs  Voronoi.hs
exe/Spirdo/: SDL3.hsc
exe/Spirdo/SDL3/: Safe.hs
lib/Spirdo/: SDL3.hsc  Wesl.hs
lib/Spirdo/Wesl/: Compiler.hs  Emit.hs  Inputs.hs  Parser.hs  Reflection.hs  Syntax.hs  Typecheck.hs  Types.hs  Uniform.hs  Util.hs
lib/Spirdo/Wesl/Emit/: Encoding.hs
lib/Spirdo/Wesl/Types/: Interface.hs  Layout.hs  Uniform.hs
scripts/parity/: fetch_cts.sh  generate_manifest.py  index_cts.py  lint_manifest.py  materialize_cts_backlog_fixtures.py  normalize_oracles.py  promote_cts_backlog.py  reclassify_backlog_expectations.hs  reclassify_backlog_expectations.sh
skills/use-spirdo/: SKILL.md
test/: Main.hs
test/cts/negative/: const_assert_pointer_compare.wesl  const_assert_type_mismatch.wesl  const_fn_switch_fallthrough.wesl  import_duplicate_alias.wesl  import_duplicate_target.wesl  missing_workgroup_size.wesl  override_cycle.wesl  scope_out_of_scope.wesl  unknown_identifier.wesl
test/cts/positive/: _import_lib.wesl  compute_basic.wesl  const_assert_composite.wesl  const_eval.wesl  const_fn_fallthrough.wesl  const_fn_if.wesl  const_fn_loop.wesl  const_fn_ptr.wesl  const_fn_switch.wesl  const_fn_var.wesl  const_fn_vec.wesl  fragment_color.wesl  import_basic.wesl  override_dependency.wesl  override_no_default.wesl
test/fixtures/: import_const_lib.wesl  import_const_main.wesl  import_struct_lib.wesl  import_struct_main.wesl  lib.wesl  main.wesl  main_alias.wesl  main_item.wesl
test/golden/: compute-basic.spv.golden  fragment-basic.spv.golden
test/parity/: cts_allowlist.tsv  cts_blocklist.tsv  manifest.tsv  pins.json  rules.tsv
test/parity/fixtures/: xfail_pointer_param_workgroup.wesl  xfail_workgroup_size_override.wesl
test/parity/fixtures/cts_backlog/: src.webgpu.api.operation.shader-module.compilation-info.spec.ts.wgsl  src.webgpu.api.validation.shader-module.entry-point.spec.ts.wgsl  src.webgpu.compat.api.validation.render-pipeline.unsupported-wgsl.spec.ts.wgsl  src.webgpu.shader.execution.expression.call.builtin.quadswap.spec.ts.wgsl  src.webgpu.shader.execution.expression.call.builtin.subgroupadd.spec.ts.wgsl  src.webgpu.shader.execution.expression.call.builtin.texturesample.spec.ts.wgsl  src.webgpu.shader.execution.expression.call.user.ptr-params.spec.ts.wgsl  src.webgpu.shader.execution.float-parse.spec.ts.wgsl  src.webgpu.shader.execution.padding.spec.ts.wgsl  src.webgpu.shader.execution.robust-access-vertex.spec.ts.wgsl  src.webgpu.shader.execution.shadow.spec.ts.wgsl  src.webgpu.shader.execution.value-init.spec.ts.wgsl  src.webgpu.shader.validation.decl.compound-statement.spec.ts.wgsl  src.webgpu.shader.validation.decl.context-dependent-resolution.spec.ts.wgsl  src.webgpu.shader.validation.expression.access.vector.spec.ts.wgsl  src.webgpu.shader.validation.expression.binary.parse.spec.ts.wgsl  src.webgpu.shader.validation.expression.call.builtin.subgroupminmax.spec.ts.wgsl  src.webgpu.shader.validation.expression.unary.arithmetic-negation.spec.ts.wgsl  src.webgpu.shader.validation.expression.unary.bitwise-complement.spec.ts.wgsl  src.webgpu.shader.validation.expression.unary.logical-negation.spec.ts.wgsl  src.webgpu.shader.validation.extension.readonly-and-readwrite-storage-textures.spec.ts.wgsl  src.webgpu.shader.validation.parse.shadow-builtins.spec.ts.wgsl  src.webgpu.shader.validation.shader-io.interpolate.spec.ts.wgsl  src.webgpu.shader.validation.shader-io.invariant.spec.ts.wgsl  src.webgpu.shader.validation.shader-io.pipeline-stage.spec.ts.wgsl  src.webgpu.shader.validation.statement.const-assert.spec.ts.wgsl  src.webgpu.shader.validation.statement.continuing.spec.ts.wgsl  src.webgpu.shader.validation.uniformity.uniformity.spec.ts.wgsl
