cabal-version:      3.14
name:               spirdo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                     , Spirdo.Wesl
                     , Spirdo.SDL3
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        directory,
        filepath,
        template-haskell
    build-tool-depends:
        hsc2hs:hsc2hs
    pkgconfig-depends:
        sdl3
    hs-source-dirs:   lib
    default-language: GHC2024

executable spirdo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        filepath,
        spirdo
    pkgconfig-depends:
        sdl3

    hs-source-dirs:   exe
    default-language: GHC2024

test-suite spirdo-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        directory,
        filepath,
        process,
        spirdo
    default-language: GHC2024
