cabal-version:      3.14
name:               spirdo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
    bench/fixtures/feature.wesl

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
                     , Spirdo.Wesl
    other-modules:
        Spirdo.Wesl.Types
        Spirdo.Wesl.Compiler
        Spirdo.Wesl.Syntax
        Spirdo.Wesl.Util
        Spirdo.Wesl.Parser
        Spirdo.Wesl.Typecheck
        Spirdo.Wesl.Emit
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        directory,
        filepath,
        text,
        template-haskell
    hs-source-dirs:   lib
    default-language: GHC2024

executable spirdo
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Examples.Compute
        Examples.Fragments
        Examples.Override
        Examples.Vertex
        Spirdo.SDL3
        Spirdo.SDL3.Safe
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        filepath,
        spirdo
    build-tool-depends:
        hsc2hs:hsc2hs
    pkgconfig-depends:
        sdl3

    hs-source-dirs:   exe
    default-language: GHC2024

test-suite spirdo-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        directory,
        filepath,
        process,
        spirdo
    default-language: GHC2024

benchmark spirdo-compile-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CompileBench.hs
    hs-source-dirs:   bench
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        spirdo
    default-language: GHC2024
