cabal-version:      3.14
name:               spirdo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                   , MIGRATION.md
extra-source-files:
    bench/fixtures/feature.wesl

common warnings
    ghc-options: -Wall
    default-extensions:
        DuplicateRecordFields
        DerivingStrategies
        DerivingVia
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings

flag spirdo-demo
    description: Build the demo executable.
    default: False
    manual: True

library
    import:           warnings
    exposed-modules:
                     , Spirdo.Wesl
                     , Spirdo.Wesl.Inputs
    other-modules:
        Spirdo.Wesl.Types
        Spirdo.Wesl.Types.Interface
        Spirdo.Wesl.Types.Layout
        Spirdo.Wesl.Types.Uniform
        Spirdo.Wesl.Compiler
        Spirdo.Wesl.Syntax
        Spirdo.Wesl.Util
        Spirdo.Wesl.Parser
        Spirdo.Wesl.Typecheck
        Spirdo.Wesl.Emit
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        directory,
        filepath,
        time,
        text,
        transformers,
        template-haskell
    hs-source-dirs:   lib
    default-language: GHC2024

executable spirdo
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Examples.Compute
        Examples.Fragments
        Examples.Fragments.Aurora
        Examples.Fragments.Bits
        Examples.Fragments.Clouds
        Examples.Fragments.FeatureMix
        Examples.Fragments.Grass
        Examples.Fragments.Grid
        Examples.Fragments.Mandelbrot
        Examples.Fragments.Plasma
        Examples.Fragments.Primitives
        Examples.Fragments.ProteanClouds
        Examples.Fragments.Raymarch
        Examples.Fragments.SdfText
        Examples.Fragments.Seascape
        Examples.Fragments.Starfield
        Examples.Fragments.Terrain
        Examples.Fragments.Triangle
        Examples.Fragments.Tunnel
        Examples.Fragments.Voronoi
        Examples.Override
        Examples.Vertex
    if !flag(spirdo-demo)
        buildable: False
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        slop,
        spirdo

    hs-source-dirs:   exe
    default-language: GHC2024

test-suite spirdo-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        directory,
        filepath,
        process,
        QuickCheck,
        spirdo
    default-language: GHC2024

benchmark spirdo-compile-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CompileBench.hs
    hs-source-dirs:   bench
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        spirdo
    default-language: GHC2024
